--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <!-- Sol panel Görünüm kısmı (toggle bar ile aktif edilir)-->
-            <div class="panel col-md-12 col-lg-4 mb-5" id="viewPanel">
+            <div class="panel col-md-12 col-lg-4 mb-5 p-4" id="viewPanel">
                 <div class="row">
 
                     <h3>Görünüş</h3>
